--- a/index.html
+++ b/index.html
@@ -191,7 +191,8 @@ Kommentar: {{raumInfo.verw_kommentar}}
 <div ng-include="'partials/menu.html'" id="homepage_menu"></div>
 
 <form ng-show="!auth">
-<input type="text" ng-model="username"> <input type="password" ng-model="password" id="login_pw"> 
+Login mit D120 LDAP-Zugangsdaten:<br>
+<input type="text" ng-model="username" placeholder="Username"> <input type="password" ng-model="password" id="login_pw"placeholder="Passwort"> 
 <button ng-click="login()">Login</button>
 </form>
 <div ng-show="auth">
