--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <script src="bower_components/fullcalendar/dist/fullcalendar.min.js"></script>
   <script type="text/javascript" src="bower_components/fullcalendar/dist/gcal.js"></script>
   
+  <script src="config.js"></script>
   <script src="oplanApp.js"></script>
   <script src="oplanBackend.js"></script>
   <script src="oplanSlot.js"></script>
